3_TypeChecking/test/good/good03.cc
void main() {
	int i;
	i = 1;

	bool b;
	b = true;

	double d;
	d = 3.14;

	string s;
	s = "MyString";
}
