3_TypeChecking/test/bad/bad01.cc
void main() {
	int i;
	bool b;
	double d;
	string s;

	int x;
	x = d;
}